# beeps

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  _typos.toml  dagger.json  flake.nix  renovate.json  store.json
.dagger/: go.mod  go.sum  main.go
.github/workflows/: ci.yml  release.yml
.sqlx/: query-04c22120943d9750eb831bc2eed49404c442a7e037c13b6d02853eec8fc5b631.json  query-09ca35caa49242fb205ae19a1752bcc034877c0a408641b66a3e65091d4c518f.json  query-0f96a7a00e3e18deaf7ab0a17265154e3c66f899ee87e32baab9b42aff5e4547.json  query-132fb55eca30e6865273de8ac647bd2fee4ee38e3a393897c60946ceb9c51b2d.json  query-1e39e88767d10fe4c159fc388965228fb2f808fdc6f834aa0cbc505091f7ccf8.json  query-1ec024241035d163b25d57006f57b02da25d76f43cf62e28d1f19b46e3679787.json  query-1f63a5cec5115a9118ad22eb9b445003946cbf654a11ec741882bebe9aea2770.json  query-30c488ac6bfa3d36eb601baffe09464bda86facfeb289489aa9d80a70245d41a.json  query-319abb93953a588af17ea879633e412756494771b576407e104c41ee72e91b8b.json  query-37568508001c520c1db1463ea44ed083c0faebbd32bcc01daf2213c472341f84.json  query-4fe582040f61558905ca70ea6f9675ddab5e6aff68c4b02fdf81e7f442b304c8.json  query-5766e70fdcb7fd1a170f83bbc086c6198d5ec00c6a85e35479f4b6be7166ce96.json  query-6419032d6eb988a86100962ab1a1ae4f49310b824965b7e98b89fd6d22e2f48e.json  query-6b86fb8ee45d0d4b3b0477448983bf5c2110b837237b3232c9fabd9c6721d382.json  query-825866a16001efe2c2925fea1471e11d3cefc36093334c730cbfc6c4ab5c963e.json  query-8fc9784cb8039e73b5ac5dd557d9a9f36d7a28a281f689b3b6065837855dbf07.json  query-bddd56d9789363a129effbb23be33b535de87149e5440370610f18ca61928e5a.json  query-c71ec098d590a36ecda527d8852d2671d4fea9d6bc6d421bf9f48f7a3af1df26.json  query-cac547320f0f73de3baa07c77e9df5f577d7fd3989fbc009d45ff27e7a7c71f9.json  query-edaecf2fb374d44826fc15b2ec89e4926d816ebc7725cee9e94bce76f008ae3d.json
.zed/: settings.json  tasks.json
app/: Cargo.toml  bun.lockb  diesel.toml  package.json  tauri.conf.json
app/migrations/2025-02-16-034749_create_pings/: up.sql
app/migrations/2025-02-16-035553_create_tags/: up.sql
app/migrations/2025-02-16-035838_create_minutes_per_pings/: down.sql  up.sql
app/src/: app.rs  lib.rs  schema.patch  schema.rs  tables.rs  ui_document.rs
beeps/: Cargo.toml
beeps-server/: Cargo.toml  build.rs
beeps-server/migrations/: 20241017115507_account.sql  20241017115508_document.sql  20241017120253_operations.sql  20241025223605_devices.sql  20241025230401_operations_references_devices.sql  20241228035358_account.sql  20250116124214_documents.sql  20250117012501_backfill_documents.sql  20250119041226_minutes_per_pings.sql  20250119042724_pings.sql  20250119042817_tags.sql
beeps-server/src/: auth.rs  conn.rs  endpoints.rs  error.rs  handlers.rs  jwt.rs  main.rs  state.rs
beeps-server/src/endpoints/: enroll.rs  hello_world.rs  login.rs  presync.rs  sync.rs  test.rs
beeps-server/src/handlers/: documents.rs  health.rs  login.rs  pull.rs  push.rs  register.rs  test.rs  whoami.rs
beeps-server/test/: schema.sql
beeps/src/: app.rs  config.rs  form_fields.rs  main.rs
beeps/src/app/: action.rs  auth_form.rs  effect.rs  popover.rs
beeps_core/: Cargo.toml
beeps_core/proptest-regressions/: scheduler.txt
beeps_core/src/: document.rs  gmap.rs  gset.rs  hlc.rs  lib.rs  lww.rs  merge.rs  node_id.rs  parts.rs  replica.rs  scheduler.rs  split.rs  state.rs  sync.rs  test.rs
beeps_core/src/sync/: client.rs  document_push.rs  documents.rs  error.rs  login.rs  pull.rs  push.rs  register.rs  whoami.rs
browser/: Cargo.toml
browser/src/: lib.rs  utils.rs
common/: Cargo.toml
common/src/: app.rs  document.rs  gmap.rs  grow_only_map.rs  gset.rs  hlc.rs  known.rs  lib.rs  log.rs  lww.rs  lww_map.rs  merge.rs  node_id.rs  op.rs  replica.rs  scheduler.rs  state.rs  test.rs  test_utils.rs  unknown.rs
dagger/: go.mod  go.sum  main.go
docs/: syncing.md
proptest-regressions/: document.txt
scripts/: 0.1.0-to-0.2.0.sh  0.2.0-to-0.3.0.sh  db-init.sh  db-reset.sh  dump-schema.sh  migrate.sh  sqlx-prepare.sh
src/: document.rs  hlc.rs  lib.rs  log.rs  lww.rs  main.rs  op.rs  state.rs
tui/: Cargo.toml
tui/src/: app.rs  config.rs  main.rs
ui/: README.md  bun.lockb  eslint.config.ts  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
ui/e2e/: vue.spec.ts
ui/src/: App.vue  bindings.ts  friendlyDate.ts  store.ts
ui/src/components/: TagInput.test.ts  TagInput.vue  TagTable.test.ts  TagTable.vue  TheWelcome.vue
