[package]
name = "beeps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beeps"

[[bin]]
name = "beeps-server"

[dependencies]
axum = { version = "0.7.7", features = ["http2", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.19", features = ["cargo", "derive"] }
color-eyre = "0.6.3"
directories = "5.0.1"
rand_core = "0.6.4"
rand_pcg = "0.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }

[dev-dependencies]
proptest = "1.5.0"
