[workspace]
resolver = "2"
members = ["beeps_core", "beeps", "beeps-server"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
allow_attributes = "warn"
alloc_instead_of_core = "warn"
decimal_literal_representation = "warn"
missing_docs_in_private_items = "warn"
