[package]
name = "app"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
beeps_core = { path = "../beeps_core" }
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
directories = "6.0.0"
log = "0.4"
serde = "1.0.217"
serde_json = "1.0.138"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
