[package]
name = "app"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
anyhow = "1.0.95"
beeps_core = { path = "../beeps_core" }
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["chrono", "sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
log = "0.4"
serde = "1.0.217"
specta = { version = "=2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri = { version = "2.2.4", features = ["specta"] }
tauri-plugin-log = "2.0.0-rc"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
