[package]
name = "beeps-server"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["http2", "macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = "0.4.38"
clap = { version = "4.5.22", features = ["cargo", "derive", "env"] }
common = { path = "../common" }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "derive",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = [
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
    "limit",
    "sensitive-headers",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
