[package]
name = "beeps-server"
version = "0.3.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["http2", "macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
jsonwebtoken = "9.3.0"
serde = "1.0.217"
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "tracing"] }
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "decompression-full",
    "limit",
    "sensitive-headers",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true

[dev-dependencies]
test-log = "0.2.16"
