[package]
name = "beeps"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
beeps_core = { path = "../beeps_core" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "5.0.1"
futures = "0.3.31"
ratatui = "0.29.0"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
chrono = "0.4.39"
tui-input = "0.11.1"
notify-rust = "4.11.3"
