[package]
name = "beeps"
version = "0.5.3"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
beeps_core = { path = "../beeps_core" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
ratatui = "0.29.0"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
chrono = "0.4.39"
tui-input = "0.11.1"
notify-rust = "4.11.4"
reqwest = { version = "0.12.12", features = ["json", "zstd"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
