[package]
name = "beeps_core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = [
    "alloc",
    "libc",
] }
rand_pcg = "0.3.1"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
proptest-state-machine = "0.3.1"
