[package]
name = "beeps_core"
version = "0.5.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
rand = { version = "0.9.0", default-features = false, features = ["alloc"] }
rand_pcg = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
url = "2.5.4"

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
proptest-state-machine = "0.3.1"
