[package]
name = "browser"
version = "0.5.1-pre"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[lints]
workspace = true

[dependencies]
beeps_core = { path = "../beeps_core" }
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
chrono = "0.4.39"
serde_json = "1.0.137"

# Enable this to get wasm-pack to leave names in the file, making it possible to
# analyze with Twiggy.
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-g', '-O']
