[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
rand_core = "0.6.4"
rand_pcg = "0.3.1"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.0"
tracing = "0.1.41"

[dev-dependencies]
proptest = "1.5.0"
