[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = [
    "alloc",
    "libc",
] }
rand_pcg = "0.3.1"
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
proptest = "1.5.0"
proptest-derive = "0.5.0"
proptest-state-machine = "0.3.0"
