[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
common = { path = "../common" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "5.0.1"
futures = "0.3.31"
ratatui = "0.29.0"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
